--- a/twitter-clone/src/app/globals.css
+++ b/twitter-clone/src/app/globals.css
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components{
+    .hoverEffect{
+        @apply cursor-pointer hover:bg-gray-200 rounded-full w-[52px] xl:w-auto h-[52px] xl:p-3
+
+    }
+}
